Added copy, paste, cut and save icons to the CAGov font library #376

--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -32,48 +32,48 @@ permalink: "cdn.html"
  Includes (ssi):</p>
 <pre>
 <span class="text-success">&lt;!doctype html&gt;</span>
-<span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;head&gt;</span>
-<span class="text-accent-p2">&lt;meta </span><span class="text-info">charset=</span><span class="text-accent7">"utf-8"</span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;title&gt;</span>State Template<span class="text-accent-p2">&lt;/title&gt;</span>
-<span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Author"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
-<span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Description"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
-<span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Keywords"</span> <span class="text-info">content=</span><span class="text-accent7">"California, government"</span><span class="text-accent-p2"> /&gt;</span>
-<span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"viewport"</span> <span class="text-info">content=</span><span class="text-accent7">"width=device-width, initial-scale=1, shrink-to-fit=no"</span><span class="text-accent-p2">&gt;</span>
+ <span class="text-accent-p2">&lt;html</span> <span class="text-info">lang=</span><span class="text-accent7">"en"</span><span class="text-accent-p2">&gt;</span>
+  <span class="text-accent-p2">&lt;head&gt;</span>
+   <span class="text-accent-p2">&lt;meta </span><span class="text-info">charset=</span><span class="text-accent7">"utf-8"</span><span class="text-accent-p2">&gt;</span>
+   <span class="text-accent-p2">&lt;title&gt;</span>State Template<span class="text-accent-p2">&lt;/title&gt;</span>
+   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Author"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
+   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Description"</span> <span class="text-info">content=</span><span class="text-accent7">"State of California"</span><span class="text-accent-p2"> /&gt;</span>
+   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"Keywords"</span> <span class="text-info">content=</span><span class="text-accent7">"California, government"</span><span class="text-accent-p2"> /&gt;</span>
+   <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"viewport"</span> <span class="text-info">content=</span><span class="text-accent7">"width=device-width, initial-scale=1, shrink-to-fit=no"</span><span class="text-accent-p2">&gt;</span>
 
-<span class="text-muted">&lt;!-- State Template CDN CSS --&gt;</span>
-<span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.0.8/css/cagov.core.css"</span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.0.8/css/colorscheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span>
+   <span class="text-muted">&lt;!-- State Template CDN CSS --&gt;</span>
+   <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.0.8/css/cagov.core.css"</span><span class="text-accent-p2">&gt;</span>
+   <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.0.8/css/colorscheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span>
 
-<span class="text-accent-p2">&lt;/head&gt;</span>
-<span class="text-accent-p2">&lt;body&gt;</span>
-<span class="text-accent-p2">&lt;header</span> <span class="text-info">role=</span><span class="text-accent7">"banner"</span> <span class="text-info">id=</span><span class="text-accent7">"header"</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed"</span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
-<span class="text-success">&lt;!-- utility header goes here --&gt;</span>
-<span class="text-success">&lt;!-- settings bar goes here --&gt;</span>
-<span class="text-success">&lt;!-- site header goes here --&gt;</span>
-<span class="text-success">&lt;!-- mobile controls go here --&gt;</span>
-<span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"navigation-search full-width-nav"</span><span class="text-accent-p2">&gt;</span>
-	<span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"head-search"</span> <span class="text-info">class=</span><span class="text-accent7">"search-container featured-search"</span><span class="text-accent-p2">&gt;</span>
-		 <span class="text-success">&lt;!-- search goes here --&gt;</span>
-	<span class="text-accent-p2">&lt;/div&gt;</span>
-	<span class="text-success">&lt;!-- site navigation goes here --&gt;</span>
-<span class="text-accent-p2">&lt;/div&gt;</span>
-<span class="text-accent-p2">&lt;div </span><span class="text-info">class=</span><span class="text-accent7">"header-decoration"</span><span class="text-accent-p2">&gt;</span><span class="text-accent-p2">&lt;/div&gt;</span>
-<span class="text-accent-p2">&lt;/header&gt;</span>
-<span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"main-content"</span> <span class="text-info">class=</span><span class="text-accent7">"main-content"</span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;div </span><span class="text-info">class=</span><span class="text-accent7">"container"</span><span class="text-accent-p2">&gt;</span>
-	<span class="text-accent-p2">&lt;main </span><span class="text-info">class=</span><span class="text-accent7">"main-primary"</span><span class="text-accent-p2">&gt;</span>
-		 Page content
-	<span class="text-accent-p2">&lt;/main&gt;</span>
-<span class="text-accent-p2">&lt;/div&gt;</span>
-<span class="text-accent-p2">&lt;/div&gt;</span>
-<span class="text-success">&lt;!-- global footer goes here --&gt;</span>
+  <span class="text-accent-p2">&lt;/head&gt;</span>
+ <span class="text-accent-p2">&lt;body&gt;</span>
+  <span class="text-accent-p2">&lt;header</span> <span class="text-info">role=</span><span class="text-accent7">"banner"</span> <span class="text-info">id=</span><span class="text-accent7">"header"</span> <span class="text-info">class=</span><span class="text-accent7">"global-header fixed"</span><span class="text-accent-p2">&gt;</span>
+    <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"skip-to-content"</span><span class="text-accent-p2">&gt;&lt;a </span><span class="text-info">href=</span><span class="text-accent7">"#main-content"</span><span class="text-accent-p2">&gt;</span>Skip to Main Content<span class="text-accent-p2">&lt;/a&gt;&lt;/div&gt;</span>
+     <span class="text-success">&lt;!-- utility header goes here --&gt;</span>
+     <span class="text-success">&lt;!-- settings bar goes here --&gt;</span>
+     <span class="text-success">&lt;!-- site header goes here --&gt;</span>
+     <span class="text-success">&lt;!-- mobile controls go here --&gt;</span>
+     <span class="text-accent-p2">&lt;div</span> <span class="text-info">class=</span><span class="text-accent7">"navigation-search full-width-nav"</span><span class="text-accent-p2">&gt;</span>
+      <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"head-search"</span> <span class="text-info">class=</span><span class="text-accent7">"search-container featured-search"</span><span class="text-accent-p2">&gt;</span>
+        <span class="text-success">&lt;!-- search goes here --&gt;</span>
+      <span class="text-accent-p2">&lt;/div&gt;</span>
+      <span class="text-success">&lt;!-- site navigation goes here --&gt;</span>
+     <span class="text-accent-p2">&lt;/div&gt;</span>
+    <span class="text-accent-p2">&lt;div </span><span class="text-info">class=</span><span class="text-accent7">"header-decoration"</span><span class="text-accent-p2">&gt;</span><span class="text-accent-p2">&lt;/div&gt;</span>
+   <span class="text-accent-p2">&lt;/header&gt;</span>
+   <span class="text-accent-p2">&lt;div</span> <span class="text-info">id=</span><span class="text-accent7">"main-content"</span> <span class="text-info">class=</span><span class="text-accent7">"main-content"</span><span class="text-accent-p2">&gt;</span>
+   <span class="text-accent-p2">&lt;div </span><span class="text-info">class=</span><span class="text-accent7">"container"</span><span class="text-accent-p2">&gt;</span>
+    <span class="text-accent-p2">&lt;main </span><span class="text-info">class=</span><span class="text-accent7">"main-primary"</span><span class="text-accent-p2">&gt;</span>
+      Page content
+    <span class="text-accent-p2">&lt;/main&gt;</span>
+   <span class="text-accent-p2">&lt;/div&gt;</span>
+   <span class="text-accent-p2">&lt;/div&gt;</span>
+   <span class="text-success">&lt;!-- global footer goes here --&gt;</span>
 
-<span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
-<span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.0.8/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
-<span class="text-accent-p2">&lt;/body&gt;</span>
-<span class="text-accent-p2">&lt;/html&gt;</span>
+   <span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
+   <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.0.8/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
+ <span class="text-accent-p2">&lt;/body&gt;</span>
+ <span class="text-accent-p2">&lt;/html&gt;</span>
 </pre>
 <p><span class="text-highlight-primary">Note:</span> The web server that hosts the State Template should be
  configured to process SSI's with the .html extension.</p>
@@ -1423,3 +1423,5 @@ https://california.azureedge.net/cdt/statetemplate/5.5.0/js/cagov.core.min.js
   </div>
  </li>
 </ol>
+
+<hr class="m-b-lg">
