--- a/pages/sample/gradient-backgrounds.html
+++ b/pages/sample/gradient-backgrounds.html
@@ -22,7 +22,7 @@ permalink: "sample/gradient-backgrounds.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
   <h1 class="mt-lg-0">Gradient Backgrounds</h1>
   <h2>Linear Gradients</h2>
   <!-- Gradients -->
