--- a/pages/sample/icon-fonts.html
+++ b/pages/sample/icon-fonts.html
@@ -1,6 +1,6 @@
 ﻿---
 title: Icon Font Library
-Landing: Visual design
+landing: Visual design
 layout: page.njk
 permalink: "sample/icon-fonts.html"
 ---
@@ -948,6 +948,11 @@ permalink: "sample/icon-fonts.html"
   <p class="icon-value">e087</p>
  </div>
  <div class="glyph fs1">
+  <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-copy"></span><span class="mls">
+    ca-gov-icon-copy</span></div>
+  <p class="icon-value">ea26</p>
+ </div>
+ <div class="glyph fs1">
   <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-coronavirus"></span><span class="mls">
     ca-gov-icon-coronavirus</span></div>
   <p class="icon-value">e996</p>
@@ -976,6 +981,11 @@ permalink: "sample/icon-fonts.html"
   <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-currency"></span><span class="mls">
     ca-gov-icon-currency</span></div>
   <p class="icon-value">e0f3</p>
+ </div>
+ <div class="glyph fs1">
+  <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-cut"></span><span class="mls">
+    ca-gov-icon-cut</span></div>
+  <p class="icon-value">ea24</p>
  </div>
  <p class="h1 group-heading" id="group-D">D</p>
 
@@ -1903,6 +1913,11 @@ permalink: "sample/icon-fonts.html"
   <p class="icon-value">e9c9</p>
  </div>
  <div class="glyph fs1">
+  <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-paste"></span><span class="mls">
+    ca-gov-icon-paste</span></div>
+  <p class="icon-value">ea25</p>
+ </div>
+ <div class="glyph fs1">
   <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-pause"></span><span class="mls">
     ca-gov-icon-pause</span></div>
   <p class="icon-value">e648</p>
@@ -2151,6 +2166,11 @@ permalink: "sample/icon-fonts.html"
   <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-sail-ship"></span><span class="mls">
     ca-gov-icon-sail-ship</span></div>
   <p class="icon-value">e9cf</p>
+ </div>
+ <div class="glyph fs1">
+  <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-save"></span><span class="mls">
+    ca-gov-icon-save</span></div>
+  <p class="icon-value">ea23</p>
  </div>
  <div class="glyph fs1">
   <div class="clearfix bshadow0 pbs"><span class="ca-gov-icon-science"></span><span class="mls">
