--- a/pages/sample/navigation-icons.html
+++ b/pages/sample/navigation-icons.html
@@ -28,7 +28,7 @@ navigation: "../modules/nav-icons.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">Navigation with icons</h1>
