--- a/pages/sample/navigation-single.html
+++ b/pages/sample/navigation-single.html
@@ -25,7 +25,7 @@ navigation: "../modules/nav-singlelevel.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">Single Level Navigation</h1>
