--- a/pages/shortcuts.html
+++ b/pages/shortcuts.html
@@ -26,9 +26,7 @@ permalink: "shortcuts.html"
   </nav>
  </div>
 
- <div class="col-md-6">
-
-
+ <div class="col-md-6 m-b-lg">
 
   <h1 class="mt-lg-0">CSS Classes Shortcuts</h1>
 
