--- a/pages/sample/css-units.html
+++ b/pages/sample/css-units.html
@@ -25,7 +25,7 @@ permalink: "sample/css-units.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">CSS Style Shortcuts</h1>
