--- a/pages/sample/navigation-dropdown.html
+++ b/pages/sample/navigation-dropdown.html
@@ -25,7 +25,7 @@ navigation: "../modules/nav-dropdown.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">Dropdown Navigation </h1>
