--- a/pages/sample/navigation-megamenu-flex.html
+++ b/pages/sample/navigation-megamenu-flex.html
@@ -28,7 +28,7 @@ navigation: "../modules/nav-flex.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">Flex Megamenu Navigation</h1>
