--- a/pages/sample/navigation-sidebar.html
+++ b/pages/sample/navigation-sidebar.html
@@ -25,7 +25,7 @@ permalink: "sample/navigation-sidebar.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">Side Navigation Menu</h1>
