--- a/pages/sample/navsamples.html
+++ b/pages/sample/navsamples.html
@@ -30,7 +30,7 @@ permalink: "sample/navsamples.html"
  <div class="col-md-9">
 
 
-  <h1 class="mt-lg-0">Navigation Samples</h1>
+  <h1 class="mt-lg-0 m-b-lg">Navigation Samples</h1>
   <p>Here are the State Web Template navigation types and variations:</p>
 
   <div class="row m-t-md">
