--- a/pages/sample/spacing.html
+++ b/pages/sample/spacing.html
@@ -24,7 +24,7 @@ permalink: "sample/spacing.html"
   </nav>
  </div>
 
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
   <h1 class="mt-lg-0">Generic Spacing Classes</h1>
 
   <p>Assign <code>margin</code> or <code>padding</code> to an element or a subset of it’s sides
