--- a/pages/sample/structure-global-footer.html
+++ b/pages/sample/structure-global-footer.html
@@ -25,7 +25,7 @@ permalink: "sample/structure-global-footer.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
   <h1 class="mt-lg-0">Global Footer</h1>
   <p>The Global Footer puts a State Web Template standard footer at the very bottom of your site. Having a common footer
