--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -25,7 +25,7 @@ permalink: "sample/structure-mobile-controls.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 m-b-lg">
 
 
   <h1 class="mt-lg-0">Mobile Controls</h1>
