--- a/pages/use.html
+++ b/pages/use.html
@@ -221,4 +221,4 @@ permalink: "use.html"
  to use for any purpose, free of any charge, all information submitted via this site except those
  submissions made under separate legal contract. The State shall be free to use, for any purpose, any
  ideas, concepts, or techniques contained in information provided through this site.</p>
-<p></p>
+<p class="m-b-lg"></p>
