--- a/pages/visual-design.html
+++ b/pages/visual-design.html
@@ -6,7 +6,7 @@ permalink: "visual-design.html"
 ---
 
 <div class="row">
- <div class="col-md-3">
+ <div class="col-md-3 p-b-lg">
   <nav aria-labelledby="page-navigation-label" class="page-navigation sticky-6">
    <div id="page-navigation-label" class="label">On this page</div>
    <ul>
@@ -16,7 +16,7 @@ permalink: "visual-design.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
+ <div class="col-md-9 p-b-lg">
 
 
   <h1 class="mt-lg-0">Visual design</h1>
