Updated breadcrumb page content #323

--- a/pages/sample/breadcrumb.html
+++ b/pages/sample/breadcrumb.html
@@ -10,7 +10,7 @@ permalink: "sample/breadcrumb.html"
  levels. </p>
 
 
-<h2 id="demo">Demo and source code</h2>
+<h2 id="Sample">Sample</h2>
 
 <!--TABS-->
 <div class="tab-group responsive">
@@ -64,7 +64,7 @@ permalink: "sample/breadcrumb.html"
 </div>
 <!--END TABS-->
 
-<h2 id="usage">Usage</h2>
+<h2 id="Usage">Usage</h2>
 <h3>When and how to use it </h3>
 <p>Use the breadcrumb component to help visitors orient themselves and move between multiple levels of a website.</p>
 <p>Use breadcrumbs to illustrate:</p>
@@ -78,8 +78,9 @@ permalink: "sample/breadcrumb.html"
 <h3>
  How not to use it
 </h3>
-<p>The breadcrumb component should not replace the main navigation on a page. Do not use the breadcrumb component on
- websites with a flat structure. There should be at least two levels of page structure.</p>
+<p>The breadcrumb component should not replace the main navigation on a page. </p>
+</p>Do not use the breadcrumb component on
+websites with a flat structure. There should be at least two levels of page structure.</p>
 
 
 
