Updated feature card image. Updated alert banner content #312

--- a/pages/sample/accordions.html
+++ b/pages/sample/accordions.html
@@ -115,7 +115,7 @@ permalink: "/sample/accordions.html"
   <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
    <div class="card-header" id="heading-html3">
     <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
-     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source Code tab header">
+     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
      Source code
     </a>
    </div>
