--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -32,7 +32,7 @@ permalink: "sample/link-grid.html"
   <!--Examples-->
   <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
    <div class="card-header" id="heading-example1">
-    <h4 class="my-0">
+    <h4 class="my-0 w-100">
      <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
       aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
       Example
@@ -51,7 +51,7 @@ permalink: "sample/link-grid.html"
   <!--HTML-->
   <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
    <div class="card-header" id="heading-html1">
-    <h4 class="my-0">
+    <h4 class="my-0 w-100">
      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
       aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source Code tab header">
       Source Code
