--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -71,7 +71,7 @@ permalink: "sample/structure-search.html"
    <div class="tab-content">
     <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
      <div class="card-header" id="heading-example1">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
         aria-controls="collapse-example1" title="Example tab header">
         Example
@@ -89,7 +89,7 @@ permalink: "sample/structure-search.html"
 
     <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
      <div class="card-header" id="heading-html1">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
         aria-expanded="false" aria-controls="collapse-html1" title="HTML Source Code tab header">
         HTML Source Code
@@ -107,7 +107,7 @@ permalink: "sample/structure-search.html"
 
     <div id="pane-include1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-include1">
      <div class="card-header" id="heading-include1">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include1" data-parent="#tab-include1"
         aria-expanded="false" aria-controls="collapse-include1" title="Nunjucks Include tab header">
         Nunjucks Include
@@ -179,7 +179,7 @@ permalink: "sample/structure-search.html"
    <div class="tab-content">
     <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
      <div class="card-header" id="heading-example2">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
         aria-controls="collapse-example2" title="Example tab header">
         Example
@@ -197,7 +197,7 @@ permalink: "sample/structure-search.html"
 
     <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
      <div class="card-header" id="heading-html2">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
         aria-expanded="false" aria-controls="collapse-html2" title="HTML Source Code tab header">
         HTML Source Code
@@ -215,7 +215,7 @@ permalink: "sample/structure-search.html"
 
     <div id="pane-include2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-include2">
      <div class="card-header" id="heading-include1">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" data-parent="#tab-include2"
         aria-expanded="false" aria-controls="collapse-include2" title="Nunjucks Include tab header">
         Nunjucks Include
