--- a/pages/sample/structure-global-footer.html
+++ b/pages/sample/structure-global-footer.html
@@ -86,7 +86,7 @@ permalink: "sample/structure-global-footer.html"
    <div class="tab-content">
     <div id="pane-example2" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example2">
      <div class="card-header" id="heading-example2">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a data-bs-toggle="collapse" href="#collapse-home" data-parent="#tab-content" aria-expanded="true"
         aria-controls="collapse-example2" title="Example tab header">
         Example
@@ -103,7 +103,7 @@ permalink: "sample/structure-global-footer.html"
 
     <div id="pane-html2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html2">
      <div class="card-header" id="heading-html2">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" data-parent="#tab-content"
         aria-expanded="false" aria-controls="collapse-html2" title="HTML Source Code tab header">
         HTML Source Code
@@ -121,7 +121,7 @@ permalink: "sample/structure-global-footer.html"
 
     <div id="pane-include2" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-include2">
      <div class="card-header" id="heading-include1">
-      <h4 class="my-0">
+      <h4 class="my-0 w-100">
        <a class="collapsed" data-bs-toggle="collapse" href="#collapse-include2" data-parent="#tab-include2"
         aria-expanded="false" aria-controls="collapse-include2" title="Nunjucks Include tab header">
         Nunjucks Include
