Updagted feature card page

--- a/pages/sample/feature-card.html
+++ b/pages/sample/feature-card.html
@@ -27,7 +27,7 @@ permalink: "sample/feature-card.html"
 
 
 
-<h2 id="demo-and-sample-markup">Demo and sample markup</h2>
+<h2 id="Sample">Sample</h2>
 
 
 <!--TABS-->
@@ -89,7 +89,7 @@ permalink: "sample/feature-card.html"
 <!--END TABS-->
 
 
-<h2 id="when-and-how-to-use-it">Usage</h2>
+<h2 id="Usage">Usage</h2>
 <h3>When and how to use it</h3>
 <p>Use the feature card to catch visitors' attention and highlight the top task or need.</p>
 <p>We recommend always using a feature card on your homepage. Place it at the top of the homepage so it appears below
@@ -104,3 +104,6 @@ permalink: "sample/feature-card.html"
  meet accessibility standards.</p>
 <p>Do not put a lot of content in your feature card. Too much content is hard to read. It will also lengthen the feature
  card and cause awkward whitespace.</p>
+
+<h2 id="Accessibility">Accessibility</h2>
+{% include "../../src/_includes/modules/accessibility.html" %}
