--- a/pages/sample/link-grid.html
+++ b/pages/sample/link-grid.html
@@ -12,7 +12,7 @@ permalink: "sample/link-grid.html"
  single column.</p>
 
 
-<h2 id="demo">Demo and sample markup</h2>
+<h2 id="Sample">Sample</h2>
 
 
 <!--TABS-->
