Updated headers margin in mobile. Added extra 100px to side nav overflow

--- a/pages/getting-started.html
+++ b/pages/getting-started.html
@@ -17,9 +17,9 @@ permalink: "getting-started.html"
    </ul>
   </nav>
  </div>
- <div class="col-md-9">
 
 
+ <div class="col-md-9 p-b-lg">
   <h1 class="mt-lg-0">Get started</h1>
 
   <p>If you are new to the California Web State Template please follow instroctions below that will help you started.
