--- a/pages/update.html
+++ b/pages/update.html
@@ -7,7 +7,7 @@ permalink: "update.html"
 
 
 <div class="row">
- <div class="col-md-3 p-b-lg">
+ <div class="col-md-3">
   <nav aria-labelledby="page-navigation-label" class="page-navigation  sticky-6">
    <div id="page-navigation-label" class="label">On this page</div>
    <ul>
