--- a/pages/sample/alert-banner.html
+++ b/pages/sample/alert-banner.html
@@ -3,19 +3,18 @@ title: Alert Banner
 landing: Components
 layout: components.njk
 permalink: "sample/alert-banner.html"
-alert: "../modules/alert-banner.html"
 ---
 
 
 
-<h1 class="mt-lg-0">Alert Banner</h1>
+<h1 class="mt-lg-0">Alert banner</h1>
 
 
-<p>The alert banner is for important, sometimes time-sensitive
+<p>The alert is for important, sometimes time-sensitive
  information. Reserve alerts for information the audience must read before anything else. It goes above the site
  navigation on any page.
 </p>
-<p>The alert banner is a band that extends across the width of the page. </p>
+<p>The alert is a band that extends across the width of the page. </p>
 <p>It includes:</p>
 <ul>
  <li>An optional icon, selected from a list of font icon options</li>
@@ -77,7 +76,7 @@ alert: "../modules/alert-banner.html"
       <div class="container">
        <button type="button" class="close ms-lg-auto" data-bs-dismiss="alert" aria-label="Close"><span
          class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
-       Your browser is currently not supported
+       Your browser is currently not supported.
        <a href="" class="btn btn-default btn-xs">Learn more <span class="sr-only">about the problem</span></a>
       </div>
      </div>
