--- a/pages/sample/countdown.html
+++ b/pages/sample/countdown.html
@@ -29,252 +29,305 @@ permalink: "sample/countdown.html"
 
 <h1 class="mt-lg-0">Countdown</h1>
 
-<hr>
-
-<h2 class="h3">Countdown primary</h2>
-
-
-<div class="row section-primary countdown">
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">days<br></span>
-  <span id="days"></span>
- </div>
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">hrs<br></span>
-  <span id="hours"></span>
- </div>
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">min<br></span>
-  <span id="minutes"></span>
- </div>
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">sec<br></span>
-  <span id="seconds"></span>
- </div>
-</div>
+<p>The countdown timer component helps visitors visualize the counting toward or away from a fixed point in time. </p>
+<p>Time intervals displayed by the countdown timer can include:</p>
+<ul>
+ <li>Days</li>
+ <li>Hours</li>
+ <li>Minutes</li>
+ <li>Seconds</li>
+</ul>
 
 
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal" data-bs-target="#countdown1">Show
- Source Code</button>
-<!-- Modal -->
-<div class="modal fade" id="countdown1" role="dialog">
- <div class="modal-dialog modal-lg">
-  <div class="modal-content">
-   <div class="modal-header">
-    <h3 class="h4 modal-title">HTML Markup</h3>
-    <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span class="sr-only">Close
-      modal</span><span class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
+<h2 id="Countdown-default">Countdown default</h2>
+
+
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs1" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example1" href="#pane-example1" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html1" href="#pane-html1" class="nav-link" data-bs-toggle="tab" role="tab">Source Code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example1" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example1">
+   <div class="card-header" id="heading-example1">
+    <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
+     Example
+    </a>
    </div>
-   <div class="modal-body">
-    <h3 class="h4">Source Code:</h3>
+   <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
+    <div class="card-body p-b-lg">
 
-    <div class="tab-group">
-     <span class="ca-gov-icon-favorite"></span>
-     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
-     <ul class="nav nav-tabs responsive" role="tablist" id="primary">
-      <li class="nav-item" role="tab"><a href="#html" data-bs-toggle="tab" class="nav-link active">HTML <span
-         class="sr-only"> for countdown
-         primary</span></a></li>
-      <li class="nav-item" role="tab"><a href="#scirpt" data-bs-toggle="tab" class="nav-link">Script
-        <span class="sr-only"> for countdown
-         primary</span></a></li>
-
-     </ul>
-     <!-- Tab panes -->
-     <div class="tab-content responsive">
-      <div class="tab-pane active" id="html" role="tabpanel">
-       <pre><code class="overflow-auto">
-<div class="row section-primary countdown">
-<div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-<span class="countdown-text">days<br></span>
-<span id="days"></span>
-    </div>
-<div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-<span class="countdown-text">hrs<br></span>
-<span id="hours"></span>
-    </div>
-<div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-<span class="countdown-text">min<br></span>
-<span id="minutes"></span>
-    </div>
-<div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-<span class="countdown-text">sec<br></span>
-<span id="seconds"></span>
-    </div>
-</div>
-</code></pre>
+     <div class="row section-default countdown">
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">days<br></span>
+       <span id="days1"></span>
       </div>
-      <div class="tab-pane" id="scirpt" role="tabpanel">
-       <pre><code class="overflow-auto">
-// Set the date we're counting down to
-var countDownDate = new Date("Apr 1, 2030 00:00:00").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-// Get todays date and time
-var now = new Date().getTime();
-
-// Find the distance between now an the count down date
-var distance = countDownDate - now;
-
-// Time calculations for days, hours, minutes and seconds
-var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-// Output the result in the elements with id="days", id="hours" etc.
-document.getElementById("days").innerHTML = days;
-document.getElementById("hours").innerHTML = hours;
-document.getElementById("minutes").innerHTML = minutes;
-document.getElementById("seconds").innerHTML = seconds;
-
-// If the count down is over, write some text
-if (distance < 0) {
-clearInterval(x);
-document.getElementById("days").innerHTML = "EXPIRED";
-}
-}, 1000);
-</code></pre>
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">hrs<br></span>
+       <span id="hours1"></span>
+      </div>
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">min<br></span>
+       <span id="minutes1"></span>
+      </div>
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">sec<br></span>
+       <span id="seconds1"></span>
       </div>
      </div>
-    </div>
-   </div>
-   <div class="modal-footer">
-    <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
-   </div>
-  </div>
- </div>
-</div><!-- / End Modal -->
 
 
-<hr />
-
-<h2 class="h3">Countdown default</h2>
-<div class="row section-default countdown">
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">days<br></span>
-  <span id="days1"></span>
- </div>
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">hrs<br></span>
-  <span id="hours1"></span>
- </div>
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">min<br></span>
-  <span id="minutes1"></span>
- </div>
- <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-  <span class="countdown-text">sec<br></span>
-  <span id="seconds1"></span>
- </div>
-</div>
-
-
-
-
-
-
-<!-- Trigger the modal with a button -->
-<button type="button" class="btn btn-default btn-sm m-t-md" data-bs-toggle="modal" data-bs-target="#countdown2">Show
- Source Code</button>
-<!-- Modal -->
-<div class="modal fade" id="countdown2" role="dialog">
- <div class="modal-dialog modal-lg">
-  <div class="modal-content">
-   <div class="modal-header">
-    <h3 class="h4 modal-title">HTML Markup</h3>
-    <button type="button" class="close btn btn-secondary" data-bs-dismiss="modal"><span class="sr-only">Close
-      modal</span><span class="ca-gov-icon-close-mark" aria-hidden="true"></span></button>
-   </div>
-   <div class="modal-body">
-    <h3 class="h4">Source Code:</h3>
-
-    <div class="tab-group">
-     <span class="ca-gov-icon-favorite"></span>
-     <!-- Nav tabs - NOTE: UNIQUE ID IS REQUIRED -->
-     <ul class="nav nav-tabs responsive" role="tablist" id="default">
-      <li class="nav-item" role="tab"><a href="#html2" data-bs-toggle="tab" class="nav-link active">HTML <span
-         class="sr-only"> for countdown
-         default</span></a></li>
-      <li class="nav-item" role="tab"><a href="#scirpt2" data-bs-toggle="tab" class="nav-link">Script
-        <span class="sr-only"> for countdown
-         default</span></a></li>
-
-     </ul>
-     <!-- Tab panes -->
-     <div class="tab-content responsive">
-      <pre><code class="overflow-auto">
-    <div class="row section-default countdown">
-    <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-    <span class="countdown-text">days<br></span>
-    <span id="days1"></span>
-            </div>
-    <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-    <span class="countdown-text">hrs<br></span>
-    <span id="hours1"></span>
-            </div>
-    <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-    <span class="countdown-text">min<br></span>
-    <span id="minutes1"></span>
-            </div>
-    <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
-    <span class="countdown-text">sec<br></span>
-    <span id="seconds1"></span>
-            </div>
-        </div>
-    </code></pre>
-     </div>
-     <div class="tab-pane" id="scirpt2" role="tabpanel">
-      <pre><code class="overflow-auto">
-// Set the date we're counting down to
-var countDownDate = new Date("Apr 1, 2030 00:00:00").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-// Get todays date and time
-var now = new Date().getTime();
-
-// Find the distance between now an the count down date
-var distance = countDownDate - now;
-
-// Time calculations for days, hours, minutes and seconds
-var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-// Output the result in the elements with id="days1", id="hours1" etc.
-document.getElementById("days1").innerHTML = days;
-document.getElementById("hours1").innerHTML = hours;
-document.getElementById("minutes1").innerHTML = minutes;
-document.getElementById("seconds1").innerHTML = seconds;
-
-// If the count down is over, write some text
-if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("days1").innerHTML = "EXPIRED";
-    }
-}, 1000);
-</code></pre>
-     </div>
     </div>
    </div>
   </div>
-  <div class="modal-footer">
-   <button type="button" class="btn btn-default" data-bs-dismiss="modal">Close</button>
+
+
+
+  <!--HTML-->
+  <div id="pane-html1" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html1">
+   <div class="card-header" id="heading-html1">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source Code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code><!--HTML-->
+      <div class="row section-default countdown">
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">days<br></span>
+        <span id="days1"></span>
+       </div>
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">hrs<br></span>
+        <span id="hours1"></span>
+       </div>
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">min<br></span>
+        <span id="minutes1"></span>
+       </div>
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">sec<br></span>
+        <span id="seconds1"></span>
+       </div>
+      </div>
+
+<!--JavaScript-->
+<script>
+ // Set the date we're counting down to
+ var countDownDate = new Date("Apr 1, 2030 00:00:00").getTime();
+
+ // Update the count down every 1 second
+ var x = setInterval(function () {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Output the result in the elements with id="days1", id="hours1" etc.
+  document.getElementById("days1").innerHTML = days;
+  document.getElementById("hours1").innerHTML = hours;
+  document.getElementById("minutes1").innerHTML = minutes;
+  document.getElementById("seconds1").innerHTML = seconds;
+
+  // If the count down is over, write some text
+  if (distance < 0) {
+   clearInterval(x);
+   document.getElementById("days1").innerHTML = "EXPIRED";
+  }
+ }, 1000);
+</script>
+     </code>
+    </pre>
+
+    </div>
+   </div>
   </div>
+
+
  </div>
 </div>
-</div><!-- / End Modal -->
+<!--END TABS-->
+
+
+
+
+
+
+<h2 id="Countdown-primary">Countdown primary</h2>
+<!--TABS-->
+<div class="tab-group responsive">
+ <ul id="tabs1" class="nav nav-tabs" role="tablist">
+  <li class="nav-item">
+   <a id="tab-example3" href="#pane-example3" class="nav-link active" data-bs-toggle="tab" role="tab">Example</a>
+  </li>
+  <li class="nav-item">
+   <a id="tab-html3" href="#pane-html3" class="nav-link" data-bs-toggle="tab" role="tab">Source code</a>
+  </li>
+
+ </ul>
+
+
+ <div id="tab-content" class="tab-content">
+  <!--Examples-->
+  <div id="pane-example3" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-example3">
+   <div class="card-header" id="heading-example3">
+    <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content" aria-expanded="true"
+     aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
+     Example
+    </a>
+   </div>
+   <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
+    <div class="card-body p-b">
+
+
+     <div class="row section-primary countdown">
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">days<br></span>
+       <span id="days"></span>
+      </div>
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">hrs<br></span>
+       <span id="hours"></span>
+      </div>
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">min<br></span>
+       <span id="minutes"></span>
+      </div>
+      <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+       <span class="countdown-text">sec<br></span>
+       <span id="seconds"></span>
+      </div>
+     </div>
+
+
+    </div>
+   </div>
+  </div>
+
+
+
+  <!--HTML-->
+  <div id="pane-html3" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-html3">
+   <div class="card-header" id="heading-html3">
+    <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content"
+     aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
+     Source code
+    </a>
+   </div>
+   <div id="collapse-html3" class="collapse" role="tabpanel" aria-labelledby="heading-html3">
+    <div class="card-body">
+     <pre style="max-height: 300px;"><code><!--HTML-->
+      <div class="row section-primary countdown">
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">days<br></span>
+        <span id="days"></span>
+       </div>
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">hrs<br></span>
+        <span id="hours"></span>
+       </div>
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">min<br></span>
+        <span id="minutes"></span>
+       </div>
+       <div class="col-sm-3 text-center p-b-md p-l-0 p-r-0">
+        <span class="countdown-text">sec<br></span>
+        <span id="seconds"></span>
+       </div>
+      </div>
+
+<!--JavaScript-->
+<script>
+ // Set the date we're counting down to
+ var countDownDate = new Date("Apr 1, 2030 00:00:00").getTime();
+
+ // Update the count down every 1 second
+ var x = setInterval(function () {
+
+  // Get todays date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now an the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Output the result in the elements with id="days", id="hours" etc.
+  document.getElementById("days").innerHTML = days;
+  document.getElementById("hours").innerHTML = hours;
+  document.getElementById("minutes").innerHTML = minutes;
+  document.getElementById("seconds").innerHTML = seconds;
+
+  // If the count down is over, write some text
+  if (distance < 0) {
+   clearInterval(x);
+   document.getElementById("days").innerHTML = "EXPIRED";
+  }
+ }, 1000);
+</script>
+     </code>
+   </pre>
+
+    </div>
+   </div>
+  </div>
+
+
+ </div>
+</div>
+<!--END TABS-->
+
+
+<h2 id="Usage">Usage</h2>
+
+<h3 class="m-t">When and how to use it</h3>
+<p>Use the countdown timer to emphasize important events. These events might include:</p>
+<p>Headings can be a:</p>
+
+<ul>
+ <li>Release dates</li>
+ <li>Application openings and/or deadlines</li>
+ <li>The launch of new products or services</li>
+</ul>
+
+
+
+<h3>How not to use it</h3>
+
+<p>Try not to use months in your countdown as they present a fluctuating metric of time. </p>
+
+
+<h2 id="Accessibility">Accessibility</h2>
+{% include "../../src/_includes/modules/accessibility.html" %}
 
 
 <script>
  // Set the date we're counting down to
- var countDownDate = new Date("Apr 1, 2030 00:00:00").getTime();
+ var countDownDate = new Date("Jan 1, 2023 00:00:00").getTime();
 
  // Update the count down every 1 second
  var x = setInterval(function () {
